=================
Changes for Crate
=================

Unreleased
==========

 - Fix: fixed an issue which caused TypeConversion errors if a setting was
   selected which represents a byte size
   (e.g. indices[‘store’][‘throttle’][‘my_bytes_per_sec’])

 - Fixed a rare bug which could cause a MapperParsingException if one creates
   a new dynamic array concurrently

2015/07/16 0.50.1
=================

- Updated crate-admin to 0.14.1 which includes following changes:

   - fix: number of underreplicated shards were fetched and displayed incorrectly

   - load plugins.json that can inject additional modules on app start
     the "Get Started" tutorial is now implemented as a plugin

   - fix: approximate number of underreplicated and missing records per table was
     calculated incorrectly, which could have lead to different results
     when viewing table info on admin ui of different nodes

   - fix: automatically refresh load history chart on overview page

 - Fixed an issue which caused `array (string)` types to be interpreted as
   `string` if an analyzer was also used

 - Fixed an issue due to which bulk partition creation operations wouldn't
   timeout correctly

 - Corrected the default value of the `bulk.partition_creation_timeout`
   setting. It was incorrectly reported as `0s` instead of `10s`.

 - Fixed an issue that could cause concurrent queries on sys tables to
   return inconsistent results if the table contains unassigned shards

 - Fixed an issue that could cause a `SELECT` statement to cause a missleading
   error if the table was deleted concurrently.

 - Fixed an issue that could cause a `SELECT` statement on partitioned tables
   to cause an error if all partitions were deleted concurrently.

 - Fixed a race condition that could cause a `REFRESH TABLE` statement to fail
   on partitioned tables

 - Fixed a bug which prevented a retry, or caused a retry to fail if a shard
   was closed because of relocation
